edited the index and about html

--- a/contact.html
+++ b/contact.html
@@ -38,12 +38,12 @@
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
           <img
-            src="images/logo.png"
+            src="asset/logo .png"
             class="logo d-none d-md-block"
             alt="Patricia Logo"
           />
           <img
-            src="images/logo-small.jpg"
+            src="asset/logo small.png"
             class="logo d-block d-md-none"
             alt="Patricia Logo"
           />
@@ -101,21 +101,23 @@
           <div class="col-md-4">
             <h3>Email</h3>
             <p>
-              <a href="mailto:patricia@gmail.com"> patricia@gmail.com </a>
-            </p>
-            <h3>Twitter</h3>
-            <p>
-              <a href="https://www.twitter.com/patricia" target="_blank">
-                @patricia
+              <a href="mailto:gxidolosbulele@gmail.com">
+                gxidolosbulele@gmail.com
               </a>
             </p>
-            <h3>Instagram</h3>
+            <h3>LinkedIn</h3>
             <p>
               <a
-                href="https://www.instagram.com/patricia.codes"
+                href="https://www.linkedin.com/in/sbulele-g-6101b6137/"
                 target="_blank"
               >
-                @patricia.codes
+                @sbuleleg
+              </a>
+            </p>
+            <h3>Portfolio</h3>
+            <p>
+              <a href="https://sbuleleg.myportfolio.com/work" target="_blank">
+                @sbuleleg
               </a>
             </p>
           </div>
@@ -140,40 +142,40 @@
       </div>
       <div class="d-flex justify-content-center mb-5">
         <a
-          href="mailto:patricia@gmail.com"
+          href="mailto:gxidolosbulele@gmail.com"
           class="email-link"
-          title="Email Patricia"
+          title="Email Sbulele"
         >
-          patricia@gmail.com
+          gxidolosbulele@gmail.com
         </a>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a
-          href="https://www.github.com/patricia"
+          href="https://gist.github.com/SibuleleG"
           target="_blank"
           title="GitHub Profile"
         >
           <i class="fab fa-github"></i>
         </a>
         <a
-          href="https://www.instragram.com/patricia"
+          href="https://www.linkedin.com/in/sbulele-g-6101b6137/"
           target="_blank"
-          title="instragram Profile"
+          title="LinkedIn Profile"
         >
-          <i class="fab fa-instagram"></i>
+          <i class="fab fa-linkedin"></i>
         </a>
         <a
-          href="https://www.twitter.com/patricia"
+          href="https://sbuleleg.myportfolio.com/work"
           target="_blank"
-          title="Twitter Profile"
+          title="Adobe Portfolio"
         >
-          <i class="fab fa-twitter"></i>
+          <i class="fas fa-globe"></i>
         </a>
       </div>
       <p class="text-center mt-5">
-        ✌️ This website was coded by Patricia Pereira, and is
+        ✌️ This website was coded by Sbulele Gxidolo, and is
         <a
-          href="https://github.com/matthieua/portfolio-project"
+          href="https://github.com/SibuleleG/Portfolio-Sbulele-Gxidolo"
           target="_blank"
         >
           open-sourced
