--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
         <div class="col d-none d-lg-block">
           <img
-            src="asset/web.png"
+            src="asset/weathr.png"
             class="img-fluid"
             alt="Web project preview"
           />
@@ -127,7 +127,7 @@
       <div class="row">
         <div class="col d-none d-lg-block">
           <img
-            src="asset/Poster_.png"
+            src="asset/post.jpeg"
             class="img-fluid"
             alt="Personal Projects preview"
           />
@@ -164,40 +164,40 @@
         </div>
         <div class="d-flex justify-content-center mb-5">
           <a
-            href="mailto:patricia@gmail.com"
+            href="mailto:gxidolosbulele@gmail.com"
             class="email-link"
-            title="Email Patricia"
+            title="Email Sbulele"
           >
-            patricia@gmail.com
+            gxidolosbulele@gmail.com
           </a>
         </div>
         <div class="social-links d-flex justify-content-center">
           <a
-            href="https://www.github.com/patricia"
+            href="https://gist.github.com/SibuleleG"
             target="_blank"
             title="GitHub Profile"
           >
             <i class="fab fa-github"></i>
           </a>
           <a
-            href="https://www.instragram.com/patricia"
+            href="https://www.linkedin.com/in/sbulele-g-6101b6137/"
             target="_blank"
-            title="instragram Profile"
+            title="LinkedIn Profile"
           >
-            <i class="fab fa-instagram"></i>
+            <i class="fab fa-linkedin"></i>
           </a>
           <a
-            href="https://www.twitter.com/patricia"
+            href="https://sbuleleg.myportfolio.com/work"
             target="_blank"
-            title="Twitter Profile"
+            title="Adobe Portfolio"
           >
-            <i class="fab fa-twitter"></i>
+            <i class="fas fa-globe"></i>
           </a>
         </div>
         <p class="text-center mt-5">
-          ✌️ This website was coded by Patricia Pereira, and is
+          ✌️ This website was coded by Sbulele Gxidolo, and is
           <a
-            href="https://github.com/matthieua/portfolio-project"
+            href="https://github.com/SibuleleG/Portfolio-Sbulele-Gxidolo"
             target="_blank"
           >
             open-sourced
