--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SheCodes Portfolio</title>
+    <title>SibuleleG Portfolio</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -34,12 +34,12 @@
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
           <img
-            src="images/logo.png"
+            src="asset/logo .png"
             class="logo d-none d-md-block"
             alt="Patricia Logo"
           />
           <img
-            src="images/logo-small.jpg"
+            src="asset/logo small.png"
             class="logo d-block d-md-none"
             alt="Patricia Logo"
           />
@@ -64,16 +64,21 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="content">
-            <h1 class="mb-4">Hi, I’m Patricia Pereira</h1>
-            <h2 class="mb-4">Front-end developer based in Portugal </h2>
+            <h1 class="mb-4">Hi, I’m Sbulele Gxidolo</h1>
+            <h2 class="mb-4">Multimedia designer based in Cape Town</h2>
             <p class="mb-5">
-              I’m currently seeking new opportunities in front-end development. I’m open to work remotely and have flexible hours. I’m highly skilled in JavaScript and React.
+              I’m currently exploring new opportunities in front-end development
+              and graphic design. I’m passionate about creating visually
+              engaging and user-friendly digital experiences. With strong skills
+              in the Adobe Creative Suite and JavaScript, I’m open to remote or
+              hybrid roles with flexible hours where I can continue growing and
+              collaborating on exciting projects.
             </p>
             <a href="/work.html" class="btn btn-branding">See my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/patricia.png" alt="" class="img-fluid" />
+          <img src="asset/image.jpeg" alt="" class="img-fluid" />
         </div>
       </div>
     </div>
@@ -95,40 +100,40 @@
       </div>
       <div class="d-flex justify-content-center mb-5">
         <a
-          href="mailto:patricia@gmail.com"
+          href="mailto:gxidolosbulele@gmail.com"
           class="email-link"
-          title="Email Patricia"
+          title="Email Sbulele"
         >
-          patricia@gmail.com
+          gxidolosbulele@gmail.com
         </a>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a
-          href="https://www.github.com/patricia"
+          href="https://gist.github.com/SibuleleG"
           target="_blank"
           title="GitHub Profile"
         >
           <i class="fab fa-github"></i>
         </a>
         <a
-          href="https://www.instragram.com/patricia"
+          href="https://www.linkedin.com/in/sbulele-g-6101b6137/"
           target="_blank"
-          title="instragram Profile"
+          title="LinkedIn Profile"
         >
-          <i class="fab fa-instagram"></i>
+          <i class="fab fa-linkedin"></i>
         </a>
         <a
-          href="https://www.twitter.com/patricia"
+          href="https://sbuleleg.myportfolio.com/work"
           target="_blank"
-          title="Twitter Profile"
+          title="Adobe Portfolio"
         >
-          <i class="fab fa-twitter"></i>
+          <i class="fas fa-globe"></i>
         </a>
       </div>
       <p class="text-center mt-5">
-        ✌️ This website was coded by Patricia Pereira, and is
+        ✌️ This website was coded by Sbulele Gxidolo, and is
         <a
-          href="https://github.com/matthieua/portfolio-project"
+          href="https://github.com/SibuleleG/Portfolio-Sbulele-Gxidolo"
           target="_blank"
         >
           open-sourced
