--- a/work.html
+++ b/work.html
@@ -34,12 +34,12 @@
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
           <img
-            src="images/logo.png"
+            src="asset/logo .png"
             class="logo d-none d-md-block"
             alt="Patricia Logo"
           />
           <img
-            src="images/logo-small.jpg"
+            src="asset/logo small.png"
             class="logo d-block d-md-none"
             alt="Patricia Logo"
           />
@@ -67,18 +67,34 @@
         <div class="row">
           <div class="col-md-6 mb-4">
             <img
-              src="images/yogurt.png"
+              src="asset/needle.png"
               class="img-fluid mb-3 rounded"
               alt="Yogurt project preview"
             />
-            <h3 class="text-center m-0">Yogurt Landing Page</h3>
+            <h3 class="text-center m-0">Punch Neddle Landing Page</h3>
             <p class="text-center text-muted">
               Built with HTML, CSS, and JavaScript
             </p>
             <div class="text-center mt-4 mb-5">
+              <a href="#" class="btn-branding" target="_blank"
+                >Launch Project</a
+              >
+            </div>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img
+              src="asset/image2.gif"
+              class="img-fluid mb-3 rounded"
+              alt="Translation project preview"
+            />
+            <h3 class="text-center m-0">Motion design (GIFs)</h3>
+            <p class="text-center text-muted">
+              designed with Adobe Photoshop and illustrator
+            </p>
+            <div class="text-center mt-4 mb-5">
               <a
-                href="https://www.yogurt.shecodes.io/"
-                class="btn-branding"
+                href="https://sbuleleg.myportfolio.com/in-app-gifs"
+                class="btn-branding-outline"
                 target="_blank"
                 >Launch Project</a
               >
@@ -86,7 +102,7 @@
           </div>
           <div class="col-md-6 mb-4">
             <img
-              src="images/weather.png"
+              src="asset/weathr.png"
               class="img-fluid mb-3 rounded"
               alt="Weather project preview"
             />
@@ -96,7 +112,7 @@
             </p>
             <div class="text-center mt-4 mb-5">
               <a
-                href="https://www.weather.shecodes.io/"
+                href="https://weatherapp6321.netlify.app/"
                 class="btn-branding"
                 target="_blank"
                 >Launch Project</a
@@ -105,17 +121,17 @@
           </div>
           <div class="col-md-6 mb-4">
             <img
-              src="images/dictionary.png"
+              src="asset/world-clock.png"
               class="img-fluid mb-3 rounded"
               alt="Disctionary project preview"
             />
-            <h3 class="text-center m-0">Dictionary App</h3>
+            <h3 class="text-center m-0">World clock</h3>
             <p class="text-center text-muted">
-              Built using HTML, an active API, advanced CSS, and React
+              Built using HTML, an active API, and advanced CSS and JavaScript
             </p>
             <div class="text-center mt-4 mb-5">
               <a
-                href="https://www.dictionary.shecodes.io/"
+                href="https://clockworld012.netlify.app/"
                 class="btn-branding"
                 target="_blank"
                 >Launch Project</a
@@ -124,17 +140,59 @@
           </div>
           <div class="col-md-6 mb-4">
             <img
-              src="images/translation.png"
+              src="asset/Ai bible.png"
               class="img-fluid mb-3 rounded"
               alt="Translation project preview"
             />
-            <h3 class="text-center m-0">Translation App</h3>
+            <h3 class="text-center m-0">AI Generator</h3>
             <p class="text-center text-muted">
-              Built using HTML, an active API, advanced CSS, and React
+              Built using HTML, an active API, advanced CSS, and AI
             </p>
             <div class="text-center mt-4 mb-5">
-              <a href="https://www.shecodes.io/" class="btn-branding-outline" target="_blank" disabled
-                >Coming soon</a
+              <a
+                href="https://funny-elf-2622e4.netlify.app/"
+                class="btn-branding-outline"
+                target="_blank"
+                >Launch Project</a
+              >
+            </div>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img
+              src="asset/image1.jpeg"
+              class="img-fluid mb-3 rounded"
+              alt="Disctionary project preview"
+            />
+            <h3 class="text-center m-0">
+              Social Media(Music Industry Twitter Space)
+            </h3>
+            <p class="text-center text-muted">
+              designed with Adobe Photoshop and illustrator
+            </p>
+            <div class="text-center mt-4 mb-5">
+              <a
+                href="https://sbuleleg.myportfolio.com/social-media"
+                class="btn-branding"
+                target="_blank"
+                >Launch Project</a
+              >
+            </div>
+          </div>
+
+          <div class="col-md-6 mb-4">
+            <video controls width="600">
+              <source src="asset/twala bam remix.mp4" type="video/mp4" />
+            </video>
+            <h3 class="text-center m-0">Motion design (Video edit)</h3>
+            <p class="text-center text-muted">
+              designed with adobe after effcts and premier
+            </p>
+            <div class="text-center mt-4 mb-5">
+              <a
+                href="https://sbuleleg.myportfolio.com/in-app-videos"
+                class="btn-branding-outline"
+                target="_blank"
+                >Launch Project</a
               >
             </div>
           </div>
@@ -159,40 +217,40 @@
       </div>
       <div class="d-flex justify-content-center mb-5">
         <a
-          href="mailto:patricia@gmail.com"
+          href="mailto:gxidolosbulele@gmail.com"
           class="email-link"
-          title="Email Patricia"
+          title="Email Sbulele"
         >
-          patricia@gmail.com
+          gxidolosbulele@gmail.com
         </a>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a
-          href="https://www.github.com/patricia"
+          href="https://gist.github.com/SibuleleG"
           target="_blank"
           title="GitHub Profile"
         >
           <i class="fab fa-github"></i>
         </a>
         <a
-          href="https://www.instragram.com/patricia"
+          href="https://www.linkedin.com/in/sbulele-g-6101b6137/"
           target="_blank"
-          title="instragram Profile"
+          title="LinkedIn Profile"
         >
-          <i class="fab fa-instagram"></i>
+          <i class="fab fa-linkedin"></i>
         </a>
         <a
-          href="https://www.twitter.com/patricia"
+          href="https://sbuleleg.myportfolio.com/work"
           target="_blank"
-          title="Twitter Profile"
+          title="Adobe Portfolio"
         >
-          <i class="fab fa-twitter"></i>
+          <i class="fas fa-globe"></i>
         </a>
       </div>
       <p class="text-center mt-5">
-        ✌️ This website was coded by Patricia Pereira, and is
+        ✌️ This website was coded by Sbulele Gxidolo, and is
         <a
-          href="https://github.com/matthieua/portfolio-project"
+          href="https://github.com/SibuleleG/Portfolio-Sbulele-Gxidolo"
           target="_blank"
         >
           open-sourced
