--- a/work.html
+++ b/work.html
@@ -36,12 +36,12 @@
           <img
             src="asset/logo .png"
             class="logo d-none d-md-block"
-            alt="Patricia Logo"
+            alt="Logo"
           />
           <img
             src="asset/logo small.png"
             class="logo d-block d-md-none"
-            alt="Patricia Logo"
+            alt="Logo"
           />
         </a>
         <ul>
@@ -49,10 +49,10 @@
             <a href="/" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="/about.html" title="About Patricia"> About</a>
+            <a href="/about.html" title="About Sbulele"> About</a>
           </li>
           <li class="active">
-            <a href="/work.html" title="Patricia's work"> Work</a>
+            <a href="/work.html" title="Sbulele's work"> Work</a>
           </li>
           <li>
             <a href="/contact.html" title="Contact Patricia"> Contact</a>
@@ -69,7 +69,7 @@
             <img
               src="asset/needle.png"
               class="img-fluid mb-3 rounded"
-              alt="Yogurt project preview"
+              alt="needle project preview"
             />
             <h3 class="text-center m-0">Punch Neddle Landing Page</h3>
             <p class="text-center text-muted">
@@ -199,6 +199,64 @@
         </div>
       </div>
     </div>
+    <div class="container my-5">
+      <h2 class="text-center mb-4">Skills Sbulele Learned</h2>
+      <div class="row text-center">
+        <div class="col-6 col-md-3 mb-4">
+          <i class="fab fa-html5 fa-2x mb-2 text-danger"></i>
+          <div>HTML</div>
+        </div>
+        <div class="col-6 col-md-3 mb-4">
+          <i class="fab fa-css3-alt fa-2x mb-2 text-primary"></i>
+          <div>CSS</div>
+        </div>
+        <div class="col-6 col-md-3 mb-4">
+          <i class="fab fa-js-square fa-2x mb-2 text-warning"></i>
+          <div>JavaScript</div>
+        </div>
+        <div class="col-6 col-md-3 mb-4">
+          <i class="fas fa-code fa-2x mb-2 text-secondary"></i>
+          <div>VSCode</div>
+        </div>
+        <div class="col-6 col-md-3 mb-4">
+          <i class="fas fa-plug fa-2x mb-2 text-info"></i>
+          <div>API</div>
+        </div>
+        <div class="col-6 col-md-3 mb-4">
+          <i class="fab fa-github fa-2x mb-2 text-dark"></i>
+          <div>GitHub</div>
+        </div>
+        <div class="col-6 col-md-3 mb-4">
+          <i class="fas fa-server fa-2x mb-2 text-success"></i>
+          <div>Hosting</div>
+        </div>
+        <div class="col-6 col-md-3 mb-4">
+          <i class="fas fa-robot fa-2x mb-2 text-purple"></i>
+          <div>AI</div>
+        </div>
+        <div class="col-6 col-md-3 mb-4">
+          <i class="fas fa-image fa-2x mb-2 text-danger"></i>
+          <div>Adobe Photoshop</div>
+        </div>
+        <div class="col-6 col-md-3 mb-4">
+          <i class="fas fa-pen-nib fa-2x mb-2 text-warning"></i>
+          <div>Adobe Illustrator</div>
+        </div>
+        <div class="col-6 col-md-3 mb-4">
+          <i class="fas fa-film fa-2x mb-2 text-info"></i>
+          <div>After Effects</div>
+        </div>
+        <div class="col-6 col-md-3 mb-4">
+          <i class="fas fa-video fa-2x mb-2 text-primary"></i>
+          <div>Premiere Pro</div>
+        </div>
+        <div class="col-6 col-md-3 mb-4">
+          <i class="fas fa-palette fa-2x mb-2 text-success"></i>
+          <div>Canva</div>
+        </div>
+      </div>
+    </div>
+
     <footer class="container">
       <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
         <div>
