--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Contact Patricia. Patricia is a front-end engineer based in Portugal. "
+      content="Contact Sbulele Gxidolo — a multimedia designer and front-end developer based in Cape Town, South Africa."
     />
     <title>Contact Patricia - Patricia Pereira</title>
 
@@ -40,12 +40,12 @@
           <img
             src="asset/logo .png"
             class="logo d-none d-md-block"
-            alt="Patricia Logo"
+            alt=" Logo"
           />
           <img
             src="asset/logo small.png"
             class="logo d-block d-md-none"
-            alt="Patricia Logo"
+            alt=" Logo"
           />
         </a>
         <ul>
@@ -53,13 +53,13 @@
             <a href="/" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="/about.html" title="About Patricia"> About</a>
+            <a href="/about.html" title="About Sbulele"> About</a>
           </li>
           <li>
-            <a href="/work.html" title="Patricia's work"> Work</a>
+            <a href="/work.html" title="Sbulele's work"> Work</a>
           </li>
           <li class="active">
-            <a href="/contact.html" title="Contact Patricia"> Contact</a>
+            <a href="/contact.html" title="Contact Sbulele"> Contact</a>
           </li>
         </ul>
       </nav>
@@ -124,6 +124,7 @@
         </div>
       </div>
     </div>
+
     <footer class="container">
       <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
         <div>
