--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Patricia is a front-end engineer based in Portugal."
+      content="Sbulele Gxidolo — a multimedia designer and front-end developer based in Cape Town, South Africa."
     />
     <title>Multimedia designer - Sbulele gxidolo</title>
 
@@ -55,13 +55,13 @@
             <a href="/" title="Homepage"> Home</a>
           </li>
           <li>
-            <a href="/about.html" title="About Patricia"> About</a>
+            <a href="/about.html" title="About Sbulele"> About</a>
           </li>
           <li>
-            <a href="/work.html" title="Patricia's work"> Work</a>
+            <a href="/work.html" title="Sbulele's work"> Work</a>
           </li>
           <li>
-            <a href="/contact.html" title="Contact Patricia"> Contact</a>
+            <a href="/contact.html" title="Contact Sbulele"> Contact</a>
           </li>
         </ul>
       </nav>
