--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
       name="description"
       content="Contact Sbulele Gxidolo — a multimedia designer and front-end developer based in Cape Town, South Africa."
     />
-    <title>Contact Patricia - Patricia Pereira</title>
+    <title>Contact Sbulele - Sbulele Gxidolo</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
