--- a/about.html
+++ b/about.html
@@ -36,12 +36,12 @@
           <img
             src="asset/logo .png"
             class="logo d-none d-md-block"
-            alt="Patricia Logo"
+            alt=" Logo"
           />
           <img
             src="asset/logo small.png"
             class="logo d-block d-md-none"
-            alt="Patricia Logo"
+            alt="Logo"
           />
         </a>
         <ul>
@@ -49,13 +49,13 @@
             <a href="/" title="Homepage"> Home</a>
           </li>
           <li class="active">
-            <a href="/about.html" title="About Patricia"> About</a>
+            <a href="/about.html" title="About Sbulele"> About</a>
           </li>
           <li>
-            <a href="/work.html" title="Patricia's work"> Work</a>
+            <a href="/work.html" title="Sbulele's work"> Work</a>
           </li>
           <li>
-            <a href="/contact.html" title="Contact Patricia"> Contact</a>
+            <a href="/contact.html" title="Contact Sbulele"> Contact</a>
           </li>
         </ul>
       </nav>
