--- a/work.html
+++ b/work.html
@@ -71,7 +71,7 @@
               class="img-fluid mb-3 rounded"
               alt="needle project preview"
             />
-            <h3 class="text-center m-0">Punch Neddle Landing Page</h3>
+            <h3 class="text-center m-0">Punch Needle Landing Page</h3>
             <p class="text-center text-muted">
               Built with HTML, CSS, and JavaScript
             </p>
@@ -89,14 +89,14 @@
             />
             <h3 class="text-center m-0">Motion design (GIFs)</h3>
             <p class="text-center text-muted">
-              designed with Adobe Photoshop and illustrator
+              Created using Adobe Photoshop and Illustrator
             </p>
             <div class="text-center mt-4 mb-5">
               <a
                 href="https://sbuleleg.myportfolio.com/in-app-gifs"
                 class="btn-branding-outline"
                 target="_blank"
-                >Launch Project</a
+                >Explore</a
               >
             </div>
           </div>
@@ -167,14 +167,14 @@
               Social Media(Music Industry Twitter Space)
             </h3>
             <p class="text-center text-muted">
-              designed with Adobe Photoshop and illustrator
+              Created using Adobe Photoshop and Illustrator
             </p>
             <div class="text-center mt-4 mb-5">
               <a
                 href="https://sbuleleg.myportfolio.com/social-media"
                 class="btn-branding"
                 target="_blank"
-                >Launch Project</a
+                >Explore</a
               >
             </div>
           </div>
@@ -185,14 +185,15 @@
             </video>
             <h3 class="text-center m-0">Motion design (Video edit)</h3>
             <p class="text-center text-muted">
-              designed with adobe after effcts and premier
+              Created animations and videos using Adobe After Effects and
+              Premiere Pro.
             </p>
             <div class="text-center mt-4 mb-5">
               <a
                 href="https://sbuleleg.myportfolio.com/in-app-videos"
                 class="btn-branding-outline"
                 target="_blank"
-                >Launch Project</a
+                >Explore</a
               >
             </div>
           </div>
