--- a/work.html
+++ b/work.html
@@ -201,7 +201,7 @@
       </div>
     </div>
     <div class="container my-5">
-      <h2 class="text-center mb-4">Skills Sbulele Learned</h2>
+      <h2 class="text-center mb-4">Skills</h2>
       <div class="row text-center">
         <div class="col-6 col-md-3 mb-4">
           <i class="fab fa-html5 fa-2x mb-2 text-danger"></i>
